src/snapshots/cargo_vet__tests__mock-simple-delta-to-unaudited-undershoot.snap
---
source: src/tests.rs
assertion_line: 984
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits:
    third-party1:(5.0.0 -> 7.0.0)  for reviewed  (+24)  (used by first-party) 

estimated review backlog: 24 lines

Use |cargo vet certify| to record the audits.

