src/snapshots/cargo_vet__tests__mock-simple-delta-to-unaudited.snap
---
source: src/tests.rs
assertion_line: 664
expression: stdout
---
Vetting Succeeded (2 fully audited 3 partially audited, 0 unaudited)

