src/snapshots/cargo_vet__tests__mock-simple-forbidden-unaudited.snap
---
source: src/tests.rs
assertion_line: 836
expression: stdout
---
Violations Found!
  third-party1:10.0.0
    this version is forbidden by own violation against =10
      criteria: "weak-reviewed"

