src/snapshots/cargo_vet__tests__mock-simple-higher-version-review.snap
---
source: src/tests.rs
assertion_line: 856
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0 needs ["reviewed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-party1:10.0.0 11.0.0 -> 10.0.0 (-21) for ["reviewed"]


