src/snapshots/cargo_vet__tests__mock-simple-init.snap
---
source: src/tests.rs
assertion_line: 331
expression: stdout
---
Vetting Succeeded (0 fully audited 2 partially audited, 3 unaudited)

