src/snapshots/cargo_vet__tests__mock-simple-lower-version-review.snap
---
source: src/tests.rs
assertion_line: 574
expression: stdout
---
Vetting Failed!

3 unvetted dependencies:
  root-package:10.0.0
    first-party:10.0.0
      third-party1:10.0.0

recommended audits:
  [TODO]

Use |cargo vet certify| to record the audits.

