src/snapshots/cargo_vet__tests__mock-simple-missing-direct-internal.snap
---
source: src/tests.rs
assertion_line: 728
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party1:10.0.0 missing ["reviewed"]

recommended audits:
    third-party1:10.0.0 full 10.0.0 (+100) for ["reviewed"]

Use |cargo vet certify| to record the audits.

