src/snapshots/cargo_vet__tests__mock-simple-missing-direct-leaf.snap
---
source: src/tests.rs
assertion_line: 745
expression: stdout
---
Vetting Failed!

1 unvetted dependencies:
  third-party2:10.0.0 missing ["reviewed"]

dependency tree:
  root-package:10.0.0
    first-party:10.0.0
      third-party2:10.0.0 needs ["reviewed"]
Use |cargo vet certify| to record the audits.
recommended audits:
    third-party2:10.0.0 full 10.0.0 (+100) for ["reviewed"]


